--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
     background-image: linear-gradient(to bottom, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
     background-repeat: no-repeat;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     justify-content: center;
     align-items: center;
 }
@@ -21,12 +20,14 @@ body {
 .container {
     background: white url(./images/bg-pattern-desktop.svg);
     background-repeat: no-repeat;
+    background-position-x: -39rem;
+    background-position-y: -25rem;
+    background-size: 71rem 82rem;
     display: flex;
     flex-direction: row;
     height: 43.6rem;
     width: 73rem;
     border-radius: 2rem;
-    place-content: center;
 }
 
 .child {
@@ -36,17 +37,67 @@ body {
 #imagem-lateral {
     background-image: url(./images/illustration-woman-online-desktop.svg);
     background-repeat: no-repeat;
+    background-position-x: -7.3rem;
+    background-position-y: 6.5rem;
+    background-size: 41rem;
+}
+
+#texto-faq {
+    margin: 1rem 0;
+}
+
+#texto-faq h1 {
+    font-size: 1.92rem;
+    font-weight: 700;
+}
+.perguntas-tudo {
+    max-width: 100rem;
 }
 
 .pergunta-resposta {
-
+    margin: 1.5rem 0;
 }
 
-.pergunta-resposta h1 {
+.pergunta {
     color: black;
-
+    background-image: url(./images/icon-arrow-down.svg);
+    background-repeat: no-repeat;
+    background-position: right;
+    font-weight: 700;
 }
 
-.pergunta-resposta p {
+.resposta {
     opacity: 70%;
+}
+
+.rodape {
+   position: absolute;
+   bottom: 1rem;
+   justify-self: center;
+   text-align: center;
+}
+
+@media screen and (max-width: 911px) {
+    body {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        margin: 0 1.5rem;
+    }
+
+    .child {
+        max-width: 100%;
+        width: auto;
+        padding: 0 1.5rem;
+    }
+
+    #texto-faq h1 {
+        text-align: center;
+    }
+
 }
